Add oppotynity open files and folders, classes file and folder

--- a/Explorer_WPF.csproj
+++ b/Explorer_WPF.csproj
@@ -24,4 +24,8 @@
     <Resource Include="resourses\UpArrow.png" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Interfaces\" />
+  </ItemGroup>
+
 </Project>
